Java 21 migration: Replace sun.misc.Unsafe with ByteBuffer and VarHandle in ShortCircuitShm
- Replaced sun.misc.Unsafe API with Java 21 stable APIs (ByteBuffer and VarHandle)
- Removed deprecated java.lang.foreign.MemorySegment (preview API in Java 21)
- Used MethodHandles.byteBufferViewVarHandle for atomic/volatile operations
- Added createDirectBuffer() helper using reflection for mmap memory wrapping
- Fixed jdk17+ profile in hadoop-project/pom.xml to use Java 21 (was hardcoded to 17)
- All 89 unit tests pass successfully with 0 failures
- Maintains binary compatibility and wire protocol for mixed Java 8/21 clusters